--- a/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
+++ b/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
@@ -47,6 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Dto\AchievementInput.cs" />
     <Compile Include="Dto\MemberAdhocInput.cs" />
     <Compile Include="Dto\MemberGroup.cs" />
@@ -70,6 +73,7 @@
     <Compile Include="Reward.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Entelect.Encentivize.Sdk.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
