Updating nuspec file to use tokens

--- a/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.nuspec
+++ b/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.nuspec
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>Entelect.Encentivize.Sdk</id>
-    <version>0.1.1.0</version>
-    <title>Entelect.Encentivize.Sdk</title>
-    <authors>Entelect</authors>
+    <id>$id$</id>
+    <version>$version$</version>
+    <title>Encentivize Sdk</title>
+    <authors>$author$</authors>
     <owners>Entelect</owners>
     <projectUrl>http://www.encentivize.co.za/</projectUrl>
     <iconUrl>http://www.encentivize.co.za/favicon.ico</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A library </description>
+    <description>$description$</description>
     <copyright>Copyright © 2013</copyright>
     <tags>Entelect Encentivize Sdk</tags>
     <dependencies>
