--- a/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
+++ b/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Dto\PagedResult.cs" />
     <Compile Include="EncentivizeClient.cs" />
     <Compile Include="Exceptions\EncentivizeException.cs" />
-    <Compile Include="IEncentivizeSdk.cs" />
+    <Compile Include="IEncentivizeClient.cs" />
     <Compile Include="MemberAchievement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedeemRewardInput.cs" />
