--- a/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
+++ b/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog">
-      <HintPath>..\..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="RestSharp">
       <HintPath>..\..\packages\RestSharp.104.2.0\lib\net4\RestSharp.dll</HintPath>
     </Reference>
@@ -65,12 +62,16 @@
     <Compile Include="Dto\MemberUpdate.cs" />
     <Compile Include="Dto\PagedResult.cs" />
     <Compile Include="EncentivizeClient.cs" />
-    <Compile Include="Exceptions\EncentivizeException.cs" />
+    <Compile Include="EncentivizeSettings.cs" />
+    <Compile Include="Exceptions\CreationFailedException.cs" />
+    <Compile Include="Exceptions\DataRetrievalFailedException.cs" />
+    <Compile Include="Exceptions\EncentivizeApiException.cs" />
+    <Compile Include="Exceptions\UpdateFailedException.cs" />
     <Compile Include="IEncentivizeClient.cs" />
-    <Compile Include="MemberAchievement.cs" />
+    <Compile Include="Dto\MemberAchievement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RedeemRewardInput.cs" />
-    <Compile Include="Reward.cs" />
+    <Compile Include="Dto\RedeemRewardInput.cs" />
+    <Compile Include="Dto\Reward.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Entelect.Encentivize.Sdk.nuspec" />
