--- a/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
+++ b/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Dto\MemberType.cs" />
     <Compile Include="Dto\MemberUpdate.cs" />
     <Compile Include="Dto\PagedResult.cs" />
+    <Compile Include="IRewardClient.cs" />
     <Compile Include="MemberClient.cs" />
     <Compile Include="EncentivizeClientBase.cs" />
     <Compile Include="EncentivizeSettings.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dto\RedeemRewardInput.cs" />
     <Compile Include="Dto\Reward.cs" />
+    <Compile Include="RewardClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Entelect.Encentivize.Sdk.nuspec" />
