Moving files & namespaces into content specific folders.

--- a/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
+++ b/src/Entelect.Encentivize.Sdk/Entelect.Encentivize.Sdk.csproj
@@ -47,40 +47,40 @@
     <Compile Include="..\..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Dto\AchievementInput.cs" />
-    <Compile Include="Dto\MemberAdhocInput.cs" />
-    <Compile Include="Dto\MemberGroup.cs" />
-    <Compile Include="Dto\Member.cs" />
-    <Compile Include="Dto\MemberGroupAbilities.cs" />
-    <Compile Include="Dto\MemberGroupDetails.cs" />
-    <Compile Include="Dto\MemberGroupInput.cs" />
-    <Compile Include="Dto\MemberGroupRoles.cs" />
-    <Compile Include="Dto\MemberGroupType.cs" />
-    <Compile Include="Dto\MemberInput.cs" />
-    <Compile Include="Dto\MemberStatus.cs" />
-    <Compile Include="Dto\MemberType.cs" />
-    <Compile Include="Dto\MemberUpdate.cs" />
-    <Compile Include="Dto\PagedResult.cs" />
-    <Compile Include="AchievementClient.cs" />
-    <Compile Include="GroupingClient.cs" />
-    <Compile Include="IAchievementClient.cs" />
-    <Compile Include="IGroupingClient.cs" />
-    <Compile Include="IPointsClient.cs" />
-    <Compile Include="IRewardClient.cs" />
-    <Compile Include="MemberClient.cs" />
+    <Compile Include="Achievements\AchievementInput.cs" />
+    <Compile Include="Points\MemberAdhocInput.cs" />
+    <Compile Include="Grouping\MemberGroup.cs" />
+    <Compile Include="Members\Member.cs" />
+    <Compile Include="Grouping\MemberGroupAbilities.cs" />
+    <Compile Include="Grouping\MemberGroupDetails.cs" />
+    <Compile Include="Grouping\MemberGroupInput.cs" />
+    <Compile Include="Grouping\MemberGroupRoles.cs" />
+    <Compile Include="Grouping\MemberGroupType.cs" />
+    <Compile Include="Members\MemberInput.cs" />
+    <Compile Include="Members\MemberStatus.cs" />
+    <Compile Include="Members\MemberType.cs" />
+    <Compile Include="Members\MemberUpdate.cs" />
+    <Compile Include="PagedResult.cs" />
+    <Compile Include="Achievements\AchievementClient.cs" />
+    <Compile Include="Grouping\GroupingClient.cs" />
+    <Compile Include="Achievements\IAchievementClient.cs" />
+    <Compile Include="Grouping\IGroupingClient.cs" />
+    <Compile Include="Points\IPointsClient.cs" />
+    <Compile Include="Rewards\IRewardClient.cs" />
+    <Compile Include="Members\MemberClient.cs" />
     <Compile Include="EncentivizeClientBase.cs" />
     <Compile Include="EncentivizeSettings.cs" />
     <Compile Include="Exceptions\CreationFailedException.cs" />
     <Compile Include="Exceptions\DataRetrievalFailedException.cs" />
     <Compile Include="Exceptions\EncentivizeApiException.cs" />
     <Compile Include="Exceptions\UpdateFailedException.cs" />
-    <Compile Include="IMemberClient.cs" />
-    <Compile Include="Dto\MemberAchievement.cs" />
-    <Compile Include="PointsClient.cs" />
+    <Compile Include="Members\IMemberClient.cs" />
+    <Compile Include="Achievements\MemberAchievement.cs" />
+    <Compile Include="Points\PointsClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Dto\RedeemRewardInput.cs" />
-    <Compile Include="Dto\Reward.cs" />
-    <Compile Include="RewardClient.cs" />
+    <Compile Include="Rewards\RedeemRewardInput.cs" />
+    <Compile Include="Rewards\Reward.cs" />
+    <Compile Include="Rewards\RewardClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Entelect.Encentivize.Sdk.nuspec" />
